# benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml
.github/workflows/: pre-commit.yml
apistemic/benchmarks/: __init__.py  llms.py  models.py  plots.py  transformers.py  util.py
apistemic/benchmarks/datasets/: companies.py  competitors.py  recommendations.py  util.py
