[project]
name = "benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "matplotlib>=3.8.0",
    "langchain-google-genai>=2.1.9",
]
